--- a/Client Android/MShiper1/app/src/main/res/layout/app_bar_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/app_bar_mshipper1.xml
@@ -5,21 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.dangvanan14.mshiper1.Mshipper1">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    tools:context="com.example.dangvanan14.mshiper1.MainActivity">
 
     <include layout="@layout/content_mshipper1" />
 
