--- a/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.dangvanan14.mshiper1.Mshipper1"
+    tools:context="com.example.dangvanan14.mshiper1.MainActivity"
     tools:showIn="@layout/app_bar_mshipper1">
 
     <TextView
