--- a/Client Android/MShiper1/app/src/main/res/layout/activity_login.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:weightSum="10">
 
         <ImageView
             android:paddingTop="20dp"
@@ -25,60 +26,71 @@
             android:layout_height="wrap_content"
             android:src="@drawable/login_logo"
             android:scaleType="fitCenter"
-            android:id="@+id/imageView3" />
+            android:id="@+id/imageView3"
+            android:layout_weight="4"
+            android:layout_marginLeft="55pt"
+            android:layout_marginRight="55pt"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:weightSum="4">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+            android:layout_weight="6">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_weight="4"
                 android:orientation="vertical"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin">
 
-                <EditText
-                    android:layout_width="wrap_content"
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/tv_username"
-                    android:hint="username"
-                    />
+                    android:layout_margin="5pt">
 
-                <EditText
-                    android:layout_width="wrap_content"
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:hint="Tài khoản"
+                        android:id="@+id/tv_username"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:hint="password"
-                    android:id="@+id/tv_password"
-                    android:password="true"
-                    />
+                    android:layout_margin="5pt">>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:hint="Mật khẩu"
+                        android:id="@+id/tv_password"/>
+
+                </android.support.design.widget.TextInputLayout>
+
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Sign in"
+                    android:text="Đăng nhập"
                     android:id="@+id/btn_signin"
                     />
 
                 <TextView
-                    android:id="@+id/txtNotification"
+                    android:id="@+id/txtforgotpassword"
+                    android:layout_marginTop="10pt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Wellcome to Mshipper"
+                    android:text="quên mật khẩu"
                     android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="15dp"
+                    android:textColor="#f44242"
+                    android:textSize="18dp"
                     android:fontFamily="facebook"/>
 
             </LinearLayout>
