--- a/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
@@ -13,8 +13,28 @@
     tools:context="com.example.dangvanan14.mshiper1.MainActivity"
     tools:showIn="@layout/app_bar_mshipper1">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
+        style="@style/CustomTabTexStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/tabel_evation" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+    </LinearLayout>
 </RelativeLayout>
