--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="4dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,21 +12,20 @@
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:weightSum="1">
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:text="Lọc" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:drawSelectorOnTop="true"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:drawSelectorOnTop="true" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
