--- a/Client Android/MShiper1/app/src/main/res/layout/item_order.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_order.xml
@@ -1,58 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
+    android:background="@android:color/black"
     android:padding="4dp"
-    android:weightSum="1">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="stateOfOrder"
-        android:scaleX="0.7"
-        android:scaleY="0.7"
-        android:src="@mipmap/ic_launcher" />
+    card_view:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:baselineAligned="false"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="4dp"
+        android:weightSum="1">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/name_ingredient"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
-
-            <TextView
-                android:id="@+id/quantity_ingredient"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="exampaaaaaaaaaaaa" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/name_ingredient2"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:contentDescription="stateOfOrder"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
+            android:baselineAligned="false"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/id"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="exampaaaaaaaaaaaa" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
+        </LinearLayout>
+
+
     </LinearLayout>
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
