--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_maps.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_maps.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <fragment android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment"></fragment>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_location"
@@ -20,5 +19,24 @@
         android:layout_marginRight="16dp"
         android:scaleType="center"
         android:elevation="8dp"
-        android:src="@drawable/ic_placeholder"/>
+        android:src="@drawable/ic_placeholder" />
+
+    <View
+        android:id="@+id/dummy"
+        android:layout_width="1dp"
+        android:layout_height="16dp"
+        app:layout_anchor="@id/fab_location"
+        app:layout_anchorGravity="top|right|end" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_direction"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_gravity="end|top"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_directions"
+        app:layout_anchor="@id/dummy"
+        app:layout_anchorGravity="top|right|end" />
+
+
 </android.support.design.widget.CoordinatorLayout>
