--- a/Client Android/MShiper1/app/src/main/res/values/styles.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/styles.xml
@@ -26,4 +26,9 @@
         <item name="android:textColor">@android:color/holo_red_light</item>
     </style>
 
+    <style name="button_alert">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">#E91E63</item>
+    </style>
+
 </resources>
