--- a/Client Android/MShiper1/app/src/main/res/menu/mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/menu/mshipper1.xml
@@ -7,4 +7,10 @@
         android:icon="@drawable/ic_menu_scan"
         android:title="Sreach"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_notify"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_bell"
+        android:title="Sreach"
+        app:showAsAction="ifRoom" />
 </menu>
