--- a/Client Android/MShiper1/app/src/main/res/menu/activity_mshipper1_drawer.xml
+++ b/Client Android/MShiper1/app/src/main/res/menu/activity_mshipper1_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_chart"
+            android:icon="@drawable/ic_pie_chart"
+            android:title="Report" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
