--- a/Client Android/MShiper1/app/src/main/res/values/dimens.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/dimens.xml
@@ -6,5 +6,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tabel_evation">4dp</dimen>
-    <dimen name="text_size_button">16sp</dimen>
+    <dimen name="text_size">18sp</dimen>
 </resources>
