create notify activity and update dialog Pay, Cancel order

--- a/Client Android/MShiper1/app/src/main/res/values/styles.xml
+++ b/Client Android/MShiper1/app/src/main/res/values/styles.xml
@@ -31,4 +31,8 @@
         <item name="android:background">#E91E63</item>
     </style>
 
+    <style name="textInfo">
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
