--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_box_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_box_detail.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:padding="8dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:weightSum="1">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -21,25 +21,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size"
-            android:textStyle="bold"
             android:layout_weight="1"
-            android:text="Tổng tiền : " />
+            android:text="Tổng tiền : "
+            android:textSize="@dimen/text_size"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/totalMoney"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size"
-
             android:layout_weight="1"
-            android:text="123123123123VND" />
+            android:text="123123123123VND"
+            android:textSize="@dimen/text_size" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_order"
-        tools:listitem="@layout/item_order"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_order">
 
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
