--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_info_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_info_detail.xml
@@ -76,7 +76,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tiền : " />
+            android:text="Tổng tiền : " />
 
         <TextView
             android:id="@+id/totalMoney"
