--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="18sp"
             android:background="@android:color/darker_gray"
             android:gravity="center"
             android:text="dd/mm/yyyy"
