--- a/Client Android/MShiper1/app/src/main/res/layout/item_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_detail.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginTop="2.5dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="2.5dp"
         card_view:cardCornerRadius="5dp">
 
@@ -24,13 +25,13 @@
 
 
             <ImageView
+                android:id="@+id/icOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="4dp"
                 android:layout_weight="0.05"
                 android:contentDescription="stateOfOrder"
-                android:id="@+id/icOrder"
-                android:src="@drawable/ic_cancel" />
+                android:src="@android:drawable/checkbox_on_background" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -55,14 +56,14 @@
                         android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
 
                     <TextView
-                        android:id="@+id/time"
+                        android:id="@+id/money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="exampaaaaaaaaaaaa" />
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/address"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -70,6 +71,14 @@
                     android:layout_weight="1"
                     android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
 
+                <TextView
+                    android:id="@+id/deliveryTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:text="" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
