--- a/Client Android/MShiper1/app/src/main/res/layout/item_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_detail.xml
@@ -9,10 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="5dp"
         android:layout_marginBottom="2.5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         card_view:cardCornerRadius="5dp">
 
         <LinearLayout
@@ -63,15 +63,6 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_weight="1"
-                    android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
-
-                <TextView
                     android:id="@+id/deliveryTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -79,6 +70,16 @@
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
                     android:text="" />
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:textColor="#c2185b"
+                    android:text="exampbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaa" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
