--- a/Client Android/MShiper1/app/src/main/res/layout/app_bar_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/app_bar_mshipper1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.dangvanan14.mshiper1.MainActivity">
+    tools:context="com.example.dangvanan14.mshiper1.activity.MainActivity">
 
     <include layout="@layout/content_mshipper1" />
 </android.support.design.widget.CoordinatorLayout>
