--- a/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/fragment_orderlist.xml
@@ -53,12 +53,12 @@
             android:layout_height="wrap_content"
             android:elevation="@dimen/tabel_evation" />
 
-        <android.support.v4.view.ViewPager
+        <com.example.dangvanan14.mshiper1.customview.CustomViewPager
             android:id="@+id/orderViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v4.view.ViewPager>
+        </com.example.dangvanan14.mshiper1.customview.CustomViewPager>
     </LinearLayout>
 
 </LinearLayout>
