update GPS and update detail

--- a/Client Android/MShiper1/app/src/main/res/layout/dialog_cancel_order.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/dialog_cancel_order.xml
@@ -43,7 +43,7 @@
             android:text="cancel" />
 
         <Button
-            android:id="@+id/btnCash"
+            android:id="@+id/btnSubmit"
             android:background="#d43f3a"
             android:layout_width="0dp"
             android:layout_height="match_parent"
