--- a/Client Android/MShiper1/app/src/main/res/layout/dialog_pay_order.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/dialog_pay_order.xml
@@ -45,7 +45,7 @@
             android:src="@drawable/ic_card" />
 
         <ImageView
-            android:id="@+id/btnCash"
+            android:id="@+id/btnSubmit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
