--- a/Client Web/webMshipper/assets/less/account_create_n.less
+++ b/Client Web/webMshipper/assets/less/account_create_n.less
@@ -2,19 +2,11 @@
 @backDark : #000;
 @redColor: #FB4226;
 
-#AccountShow{
-  table{
-    th{
-      text-align: center;
-    }
-
-    .center{
-      text-align: center;
-    }
-    button{
-      display: block;
-      margin: auto;
-    }
+#AccountCreateN{
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
   }
 
   .overlay {
@@ -128,10 +120,5 @@
 
   .panel-body{
     padding: 0 20px 0px 20px!important;
-  }
-
-  #mapAccountAddress{
-    margin-left: 0!important;
-    margin-right: 0!important;
   }
 }
