--- a/Client Web/webMshipper/assets/less/main.less
+++ b/Client Web/webMshipper/assets/less/main.less
@@ -1,2 +1,6 @@
 //@import 'core';
 @import "account_show";
+@import "warehouse_show";
+@import "index";
+@import "account_create";
+@import "account_create_n";
