--- a/Client Web/webMshipper/assets/css/warehouse_show.css
+++ b/Client Web/webMshipper/assets/css/warehouse_show.css
@@ -1,14 +1,14 @@
-#AccountShow table th {
+#WarehouseShow table th {
   text-align: center;
 }
-#AccountShow table .center {
+#WarehouseShow table .center {
   text-align: center;
 }
-#AccountShow table button {
+#WarehouseShow table button {
   display: block;
   margin: auto;
 }
-#AccountShow .overlay {
+#WarehouseShow .overlay {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -21,7 +21,7 @@
   width: 100%;
   z-index: 99;
 }
-#AccountShow .overlay .closeOver {
+#WarehouseShow .overlay .closeOver {
   cursor: pointer;
   float: right;
   padding-right: 10px;
@@ -31,19 +31,19 @@
   right: 1%;
   z-index: 2;
 }
-#AccountShow .overlay .core {
+#WarehouseShow .overlay .core {
   font-size: 40px;
   color: #7ED321;
   font-family: 'SF Medium';
   text-align: center;
   clear: both;
 }
-#AccountShow .overlay .starSelect {
+#WarehouseShow .overlay .starSelect {
   max-width: 162px;
   height: auto;
   margin: auto;
 }
-#AccountShow .overlay .inputComment {
+#WarehouseShow .overlay .inputComment {
   padding: 20px;
   margin: 20px;
   border-radius: 4px;
@@ -53,10 +53,10 @@
   resize: none;
   font-size: 16px;
 }
-#AccountShow .overlay .inputComment:focus {
+#WarehouseShow .overlay .inputComment:focus {
   outline-width: 0;
 }
-#AccountShow .overlay .buttonChoseMedia {
+#WarehouseShow .overlay .buttonChoseMedia {
   margin-top: 0!important;
   margin-bottom: 25px!important;
   margin-left: 20px;
@@ -68,13 +68,13 @@
   position: relative;
   font-family: 'SF Medium';
 }
-#AccountShow .overlay .buttonChoseMedia .buttonMedia {
+#WarehouseShow .overlay .buttonChoseMedia .buttonMedia {
   height: 16px;
   width: auto;
   position: absolute;
   left: 10px;
 }
-#AccountShow .overlay .button {
+#WarehouseShow .overlay .button {
   margin-top: 0!important;
   margin-bottom: 25px!important;
   margin-right: 20px;
@@ -86,7 +86,7 @@
   background-image: linear-gradient(-226deg, #fb4226 11%, #be2912 100%);
   font-family: 'SF Medium';
 }
-#AccountShow .overlay .model {
+#WarehouseShow .overlay .model {
   position: relative;
   position: absolute;
   transform: translate(-50%);
@@ -104,10 +104,10 @@
   background-clip: padding-box;
   outline: 0;
 }
-#AccountShow .panel-body {
+#WarehouseShow .panel-body {
   padding: 0 20px 0px 20px!important;
 }
-#AccountShow #mapAccountAddress {
+#WarehouseShow #mapAccountAddress {
   margin-left: 0!important;
   margin-right: 0!important;
 }
