--- a/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/content_mshipper1.xml
@@ -2,16 +2,15 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:id="@+id/content_mshipper1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.dangvanan14.mshiper1.activity.MainActivity"
         tools:showIn="@layout/app_bar_mshipper1">
 
 
@@ -58,5 +57,12 @@
 
             </android.support.v4.view.ViewPager>
         </LinearLayout>
+
+        <com.roughike.bottombar.BottomBar
+            android:id="@+id/bottomBar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            app:bb_tabXmlResource="@xml/bottombar_tabs" />
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
