--- a/Client Android/MShiper1/app/src/main/res/layout/activity_chat.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_chat.xml
@@ -4,15 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/appBarLayout"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true">
+                <!-- The toolbar -->
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar_chat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:fitsSystemWindows="true"
+                    android:minHeight="?attr/actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_chat"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/item_chat"
             android:layout_above="@+id/linearLayout"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+            android:layout_below="@+id/appBarLayout" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,8 +50,9 @@
 
                 <ImageView
                     android:id="@+id/btnSendChat"
+                    android:paddingStart="10sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:srcCompat="@drawable/ic_menu_send" />
 
         </LinearLayout>
