--- a/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
@@ -20,36 +20,15 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_assign_driver"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tl_assign_driver_detail"
+        style="@style/CustomTabTexStyle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.9"
-        tools:listitem="@layout/item_assign_driver_detail" />
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/tabel_evation" />
 
-    <LinearLayout
+    <com.example.dangvanan14.mshiper1.customview.CustomViewPager
+        android:id="@+id/vp_assign_driver_detail"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <Button
-            android:id="@+id/btn_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:backgroundTint="@color/yellow"
-            android:text="Xác nhận"
-            tools:ignore="NestedWeights" />
-
-        <Button
-            android:id="@+id/btn_extend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:text="Gia hạn"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
+        android:layout_height="match_parent"/>
 </LinearLayout>
