--- a/Client Android/MShiper1/app/src/main/res/layout/item_assign_driver_detail_row.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/item_assign_driver_detail_row.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:background="@android:color/darker_gray"
     android:orientation="vertical"
-    android:paddingStart="4dp"
+    android:paddingBottom="4dp"
     android:paddingEnd="4dp"
-    android:paddingBottom="4dp">
+    android:paddingStart="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -161,6 +161,44 @@
             android:layout_marginStart="10dp"
             android:layout_weight="0.475"
             android:text="11/07/2017 00:00"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/btn_arrived"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:enabled="false"
+            android:text="Đã đến"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_complete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:enabled="false"
+            android:gravity="center"
+            android:text="Xong"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:enabled="false"
+            android:text="Hủy"
             android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
