add Show Vehicles

--- a/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
+++ b/Client Android/MShiper1/app/src/main/res/layout/activity_assign_driver_detail.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:elevation="@dimen/tabel_evation" />
 
-    <com.example.dangvanan14.mshiper1.customview.CustomViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/vp_assign_driver_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
