--- a/Client Web/webMshipper/assets/less/account_show.less
+++ b/Client Web/webMshipper/assets/less/account_show.less
@@ -134,4 +134,31 @@
     margin-left: 0!important;
     margin-right: 0!important;
   }
+
+  .buttonTable{
+    display: inline-block;
+    vertical-align: text-bottom;
+  }
+
+  .buttonTablePad{
+    padding: 6.7px 10px !important;
+  }
+
+  .buttonTableBtn{
+    button{
+      width: 160px;
+    }
+  }
+
+  .buttonTableSelect{
+    display: inline-block;
+    width: 160px
+  }
+
+  .table-td-center{
+    td[rowspan] {
+      vertical-align: top;
+      text-align: left;
+    }
+  }
 }
