--- a/Client Web/webMshipper/assets/less/main.less
+++ b/Client Web/webMshipper/assets/less/main.less
@@ -4,3 +4,6 @@
 @import "index";
 @import "account_create";
 @import "account_create_n";
+@import "maps_main";
+@import "order_create_n";
+@import "appmain";
