--- a/Client Web/webMshipper/assets/css/main.css
+++ b/Client Web/webMshipper/assets/css/main.css
@@ -111,6 +111,24 @@
   margin-left: 0!important;
   margin-right: 0!important;
 }
+#AccountShow .buttonTable {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+#AccountShow .buttonTablePad {
+  padding: 6.7px 10px !important;
+}
+#AccountShow .buttonTableBtn button {
+  width: 160px;
+}
+#AccountShow .buttonTableSelect {
+  display: inline-block;
+  width: 160px;
+}
+#AccountShow .table-td-center td[rowspan] {
+  vertical-align: top;
+  text-align: left;
+}
 #WarehouseShow table th {
   text-align: center;
 }
@@ -330,4 +348,187 @@
 }
 #AccountCreateN .panel-body {
   padding: 0 20px 0px 20px!important;
+}
+#MapsMain html,
+#MapsMain body,
+#MapsMain #map {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#MapsMain .stations,
+#MapsMain .stations svg {
+  position: absolute;
+}
+#MapsMain .stations svg {
+  font: 10px sans-serif;
+}
+#MapsMain .stations circle {
+  fill: #bf3f24;
+  stroke: rgba(191, 63, 36, 0.5);
+  stroke-width: 5px;
+}
+#MapsMain .stations text {
+  fill: #fff;
+}
+#OrderCreateN {
+  /**
+ * For the correct positioning of the placeholder element, the dnd-list and
+ * it's children must have position: relative
+ */
+  /**
+   * The dnd-list should always have a min-height,
+   * otherwise you can't drop to it once it's empty
+   */
+  /**
+   * The dndDraggingSource class will be applied to
+   * the source element of a drag operation. It makes
+   * sense to hide it to give the user the feeling
+   * that he's actually moving it.
+   */
+  /**
+   * An element with .dndPlaceholder class will be
+   * added to the dnd-list while the user is dragging
+   * over it.
+   */
+  /**
+   * The dnd-lists's child elements currently MUST have
+   * position: relative. Otherwise we can not determine
+   * whether the mouse pointer is in the upper or lower
+   * half of the element we are dragging over. In other
+   * browsers we can use event.offsetY for this.
+   */
+  /**
+   * Gender-specifc background
+   */
+  /**
+   * Handle positioning
+   */
+}
+#OrderCreateN table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+#OrderCreateN .typesDemo ul[dnd-list],
+#OrderCreateN .typesDemo ul[dnd-list] > li {
+  position: relative;
+}
+#OrderCreateN .typesDemo ul[dnd-list] {
+  min-height: 42px;
+  padding-left: 0px;
+}
+#OrderCreateN .typesDemo ul[dnd-list] .dndDraggingSource {
+  display: none;
+}
+#OrderCreateN .typesDemo ul[dnd-list] .dndPlaceholder {
+  display: block;
+  background-color: #ddd;
+  padding: 10px 15px;
+  min-height: 42px;
+}
+#OrderCreateN .typesDemo ul[dnd-list] li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  display: block;
+  margin-bottom: -1px;
+  /* Disable text selection if item is not draggable */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+#OrderCreateN .typesDemo ul[dnd-list] li dnd-nodrag {
+  display: block;
+  padding: 10px 15px;
+}
+#OrderCreateN .typesDemo ul[dnd-list] li.background-man {
+  background-color: #CAE0FC;
+}
+#OrderCreateN .typesDemo ul[dnd-list] li.background-woman {
+  background-color: #FFE2F5;
+}
+#OrderCreateN .typesDemo ul[dnd-list] input.background-man {
+  background-color: #D8E9FF;
+  color: #2F4D99;
+}
+#OrderCreateN .typesDemo ul[dnd-list] input.background-woman {
+  background-color: #FFF0FA;
+  color: #D84FA7;
+}
+#OrderCreateN .typesDemo .handle {
+  cursor: move;
+  position: absolute;
+  top: 14px;
+}
+#OrderCreateN .typesDemo .name {
+  margin-left: 20px;
+}
+#OrderCreateN .btn-droppable {
+  width: 180px;
+  height: 30px;
+  padding-left: 4px;
+}
+#OrderCreateN .btn-draggable {
+  width: 160px;
+}
+#OrderCreateN .buttonTable {
+  vertical-align: middle;
+  display: inline-block;
+}
+#OrderCreateN .buttonTablePad {
+  padding: 6.7px 10px !important;
+}
+#OrderCreateN .buttonTableBtn button {
+  width: 160px;
+}
+#OrderCreateN .buttonTableSelect {
+  display: inline-block;
+  width: 160px;
+}
+#OrderCreateN .table-td-center td[rowspan] {
+  vertical-align: top;
+  text-align: left;
+}
+#AppMainStyle .dropbtn {
+  background-color: #337ab7;
+  color: white;
+  padding: 6px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  min-width: 280px;
+}
+#AppMainStyle .dropdown {
+  position: relative;
+  display: inline-block;
+}
+#AppMainStyle .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 280px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+#AppMainStyle .dropdown-content a {
+  color: black;
+  padding: 6px 8px;
+  text-decoration: none;
+  display: block;
+}
+#AppMainStyle .dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+#AppMainStyle .dropdown:hover .dropdown-content {
+  display: block;
+}
+#AppMainStyle .dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
